Add Caffeine power management

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -6,6 +6,7 @@
 
   roles:
     - { role: keyboard-basics }
+    - { role: power-saving }
     - { role: dev-tools }
     - { role: spotify }
     - { role: virtualbox }
