Add VLC snap to install * Also bundled VLC with Spotify into media role.

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -9,5 +9,5 @@
     - { role: power-saving }
     - { role: dev-tools }
     - { role: auth }
-    - { role: spotify }
+    - { role: media }
     - { role: virtualbox }
