Add WireShark install and permission configuration

--- a/ansible/roles/net/tasks/main.yml
+++ b/ansible/roles/net/tasks/main.yml
@@ -8,5 +8,22 @@
 - name: Install WhoIs
   apt: name=whois
 
-- name: Install minicom (for initialization of Cisco devices)
+- name: Install minicom, for initialization of Cisco devices
   apt: name=minicom
+
+- name: Install WireShark
+  apt: name=wireshark-qt
+
+- name: Enable non-root wireshark 1/2 (Set debconf)
+  become: yes
+  debconf: name='wireshark-common' question='wireshark-common/install-setuid' value='true' vtype='boolean'
+
+- name: Enable non-root wireshark 2/2 (reconfiguring wireshark-common package)
+  become: yes
+  command: dpkg-reconfigure -f noninteractive wireshark-common
+
+- name: Add current user to WireShark group (user needs to relog to enable this)
+  user:
+    name: "{{ lookup('env','USER') }}"
+    append: yes
+    groups: wireshark
