--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -1,7 +1,7 @@
 ---
 - name: Provision main machine
   hosts: localhost
-  remote_user: david
+  remote_user: "{{ lookup('env','USER') }}"
   become: yes
 
   roles:
