--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -14,4 +14,5 @@
     - { role: net, tags: net }
     - { role: browser, tags: browse }
     - { role: messaging, tags: msg }
+    - { role: file-sync, tags: sync }
     - { role: virtualbox }
