Add ripgrep package * For Notational Velocity

--- a/ansible/roles/dev-tools/tasks/main.yml
+++ b/ansible/roles/dev-tools/tasks/main.yml
@@ -4,3 +4,6 @@
 
 - name: Install NeoVim
   apt: name=neovim
+
+- name: Install ripgrep, for Notational Velocity's fast regex dir searching
+  apt: name=ripgrep
