--- a/ansible/roles/terminal/tasks/main.yml
+++ b/ansible/roles/terminal/tasks/main.yml
@@ -22,3 +22,10 @@
 
 - name: Install SilverSearcher, for easy file finding
   apt: name=silversearcher-ag
+
+- name: Install bat, a cat alternative
+  apt:
+    deb: https://github.com/sharkdp/bat/releases/download/v0.11.0/bat-musl_0.11.0_amd64.deb
+
+- name: Install exa, an ls alternative
+  apt: name=exa
