--- a/ansible/roles/file-sync/tasks/main.yml
+++ b/ansible/roles/file-sync/tasks/main.yml
@@ -2,3 +2,6 @@
 - name: Install Dropbox install helper, through Dropbox' own deb package
   apt:
     deb: https://www.dropbox.com/download?dl=packages/ubuntu/dropbox_2019.02.14_amd64.deb
+
+- name: Install Restic for backups
+  apt: name=restic
