--- a/ansible/roles/terminal/tasks/main.yml
+++ b/ansible/roles/terminal/tasks/main.yml
@@ -8,19 +8,19 @@
 - name: Ensure tmux plugin dir
   become: no
   file:
-    path: ~/.tmux/plugins
+    path: ~/.config/tmux/plugins
     state: directory
 
 - name: Install tmux plugin manager
   become: no
   git:
     repo: https://github.com/tmux-plugins/tpm
-    dest: ~/.tmux/plugins/tpm
+    dest: ~/.config/tmux/plugins/tpm
     force: yes
 
 - name: Run tmux plugin manager install script
   become: no
-  command: ~/.tmux/plugins/tpm/bin/install_plugins
+  command: ~/.config/tmux/plugins/tpm/bin/install_plugins
 
 - name: Install xclip, for copy-pasting
   apt: name=xclip
