--- a/ansible/roles/messaging/tasks/main.yml
+++ b/ansible/roles/messaging/tasks/main.yml
@@ -9,3 +9,6 @@
 
 - name: Install Signal Desktop client
   apt: name=signal-desktop update_cache=yes
+
+- name: Install emoji support, for browsers and such
+  apt: name=fonts-noto-color-emoji
