Add kubectl for k8s control

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -18,3 +18,4 @@
     - { role: file-sync, tags: sync }
     - { role: productivity, tags: productivity }
     - { role: virtualbox }
+    - { role: container, tags: container }
