--- a/roles/container/tasks/main.yml
+++ b/roles/container/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: Install Docker
+  apt: name=docker.io
+
 - name: Install https transport package for apt, recommended for kubectl
   apt: name=apt-transport-https
 
