--- a/roles/browser/tasks/main.yml
+++ b/roles/browser/tasks/main.yml
@@ -15,3 +15,6 @@
 - name: Install Chrome
   apt:
     deb: https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+
+- name: Install Lynx browser
+  apt: name=lynx
