--- a/site.yml
+++ b/site.yml
@@ -5,6 +5,7 @@
   become: yes
 
   roles:
+    - { role: package-managers, tags: package }
     - { role: os-gui, tags: os-gui }
     - { role: keyboard-basics, tags: keyboard }
     - { role: terminal, tags: terminal }
