--- a/roles/productivity/tasks/main.yml
+++ b/roles/productivity/tasks/main.yml
@@ -1,3 +1,9 @@
 ---
 - name: Install libgconf, dependency of Todoist fork by Kamhix
   apt: name=libgconf-2-4
+
+- name: Install Gnome calendar
+  apt: name=gnome-calendar
+
+- name: Set Gnome weather for Calendar to Celcius
+  command: gsettings set org.gnome.GWeather temperature-unit "'centigrade'"
