--- a/roles/auth/tasks/main.yml
+++ b/roles/auth/tasks/main.yml
@@ -1,3 +1,9 @@
 ---
 - name: Install Yubikey Authenticator
   apt: name=yubioath-desktop
+
+- name: Install 1password CLI
+  unarchive:
+    src: https://cache.agilebits.com/dist/1P/op/pkg/v0.6/op_linux_amd64_v0.6.zip
+    dest: /usr/local/bin
+    remote_src: yes
