Add jq for JSON processing

--- a/roles/terminal/tasks/main.yml
+++ b/roles/terminal/tasks/main.yml
@@ -78,3 +78,6 @@
 
 - name: Install neofetch for easy OS and system info
   apt: name=neofetch
+
+- name: Install jq for JSON processing
+  apt: name=jq
