--- a/roles/terminal/tasks/main.yml
+++ b/roles/terminal/tasks/main.yml
@@ -59,8 +59,14 @@
   apt:
     deb: https://github.com/sharkdp/bat/releases/download/v0.11.0/bat-musl_0.11.0_amd64.deb
 
-- name: Install exa, an ls alternative
-  apt: name=exa
+- name: Install Exa, an ls alternative
+  unarchive:
+    src: https://github.com/ogham/exa/releases/download/v0.9.0/exa-linux-x86_64-0.9.0.zip
+    dest: /tmp/
+    remote_src: yes
+
+- name: Move Exa binary to bin folder
+  command: mv /tmp/exa-linux-x86_64 /usr/local/bin/exa
 
 - name: Install htop, an alternative to top
   apt: name=htop
