Add php composer

--- a/roles/dev-tools/tasks/main.yml
+++ b/roles/dev-tools/tasks/main.yml
@@ -24,6 +24,9 @@
   args:
     chdir: ~/.vim/plugged/YouCompleteMe
 
+- name: Install PHP Composer
+  apt: name=composer
+
 - name: Install Travis CI client
   apt: name=travis
 
