Add openjdk-8-jre for Katalon Studio
For automated browser and api testing

--- a/roles/dev-tools/tasks/main.yml
+++ b/roles/dev-tools/tasks/main.yml
@@ -49,3 +49,6 @@
     name: npm
     global: yes
     state: latest
+
+- name: Install Java runtime (Katalon Studio needs OpenJDK 8)
+  apt: name=openjdk-8-jre
