Add Flatpack Gnome extension

--- a/roles/package-managers/tasks/main.yml
+++ b/roles/package-managers/tasks/main.yml
@@ -10,3 +10,6 @@
 
 - name: Install Flatpack
   apt: name=flatpak
+
+- name: Install Flatpack Gnome extension
+  apt: name=gnome-software-plugin-flatpak
