Disabled Brave installation (temp), removed Chrome and Lynx

--- a/roles/browser/tasks/main.yml
+++ b/roles/browser/tasks/main.yml
@@ -3,18 +3,10 @@
   apt_key:
     url: https://brave-browser-apt-release.s3.brave.com/brave-core.asc
 
-- name: Register Brave package repo for the current distro release
-  apt_repository:
-    repo: deb [arch=amd64] https://brave-browser-apt-release.s3.brave.com/ {{ ansible_distribution_release }} main
+# Todo: re-enable Brave installation in Linuxmint, preferably by package manager.
+#- name: Register Brave package repo for the current distro release
+#  apt_repository:
+#    repo: deb [arch=amd64] https://brave-browser-apt-release.s3.brave.com/ {{ ansible_distribution_release }} main
 
-- name: Install Brave browser
-  apt: name=brave-browser update_cache=yes
-
-# ______________________________
-
-- name: Install Chrome
-  apt:
-    deb: https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-
-- name: Install Lynx browser
-  apt: name=lynx
+#- name: Install Brave browser
+#  apt: name=brave-browser update_cache=yes
