--- a/roles/net/tasks/main.yml
+++ b/roles/net/tasks/main.yml
@@ -11,22 +11,22 @@
 - name: Install minicom, for initialization of Cisco devices
   apt: name=minicom
 
-- name: Install WireShark
-  apt: name=wireshark-qt
+  #- name: Install WireShark
+  #  apt: name=wireshark-qt
 
-- name: Enable non-root wireshark 1/2 (Set debconf)
-  become: yes
-  debconf: name='wireshark-common' question='wireshark-common/install-setuid' value='true' vtype='boolean'
+  #- name: Enable non-root wireshark 1/2 (Set debconf)
+  #  become: yes
+  #  debconf: name='wireshark-common' question='wireshark-common/install-setuid' value='true' vtype='boolean'
 
-- name: Enable non-root wireshark 2/2 (reconfiguring wireshark-common package)
-  become: yes
-  command: dpkg-reconfigure -f noninteractive wireshark-common
+  #- name: Enable non-root wireshark 2/2 (reconfiguring wireshark-common package)
+  #  become: yes
+  #  command: dpkg-reconfigure -f noninteractive wireshark-common
 
-- name: Add current user to WireShark group (user needs to relog to enable this)
-  user:
-    name: "{{ lookup('env','USER') }}"
-    append: yes
-    groups: wireshark
+  #- name: Add current user to WireShark group (user needs to relog to enable this)
+  #  user:
+    #    name: "{{ lookup('env','USER') }}"
+    #    append: yes
+    #    groups: wireshark
 
 - name: Add NordVPN client repository and key
   apt:
@@ -37,11 +37,11 @@
     name: nordvpn
     update_cache: yes
 
-- name: Install nfs-common to mount nfs disks
-  apt: name=nfs-common
+#- name: Install nfs-common to mount nfs disks
+# apt: name=nfs-common
 
-- name: Install net-tools for netstat and such
-  apt: name=net-tools
+#- name: Install net-tools for netstat and such
+# apt: name=net-tools
 
-- name: Install cifs-tools for Samba shares on commandline
-  apt: name=cifs-tools
+#- name: Install cifs-tools for Samba shares on commandline
+#  apt: name=cifs-tools
