Add iot playbook module for Tasmotizer and such

--- a/site.yml
+++ b/site.yml
@@ -23,3 +23,5 @@
     - { role: container, tags: container }
     - { role: hosting, tags: hosting }
     - { role: notes, tags: notes }
+    - { role: virtualbox, tags: virtualbox }
+    - { role: iot, tags: iot }
