Upgraded customly installed packages

--- a/roles/browser/tasks/main.yml
+++ b/roles/browser/tasks/main.yml
@@ -3,10 +3,9 @@
   apt_key:
     url: https://brave-browser-apt-release.s3.brave.com/brave-core.asc
 
-# Todo: re-enable Brave installation in Linuxmint, preferably by package manager.
-#- name: Register Brave package repo for the current distro release
-#  apt_repository:
-#    repo: deb [arch=amd64] https://brave-browser-apt-release.s3.brave.com/ {{ ansible_distribution_release }} main
+- name: Register Brave package repo for the current distro release
+  apt_repository:
+    repo: deb [arch=amd64] https://brave-browser-apt-release.s3.brave.com/ {{ ansible_distribution_release }} main
 
-#- name: Install Brave browser
-#  apt: name=brave-browser update_cache=yes
+- name: Install Brave browser
+  apt: name=brave-browser update_cache=yes
