--- a/roles/auth/tasks/main.yml
+++ b/roles/auth/tasks/main.yml
@@ -4,6 +4,8 @@
 
 - name: Install 1password CLI
   unarchive:
-    src: https://cache.agilebits.com/dist/1P/op/pkg/v0.9.1/op_linux_amd64_v0.9.1.zip
+    src: https://cache.agilebits.com/dist/1P/op/pkg/v1.4.0/op_linux_amd64_v1.4.0.zip
     dest: /usr/local/bin
     remote_src: yes
+    # Find releases:
+    # https://app-updates.agilebits.com/product_history/CLI
