--- a/site.yml
+++ b/site.yml
@@ -4,16 +4,13 @@
   remote_user: "{{ lookup('env','USER') }}"
   become: yes
 
-  vars_prompt:
-    - name: "my_password"
-      prompt: "Enter password to change default shell"
-      private: yes
 
   roles:
     - { role: package-managers, tags: package }
     - { role: keyboard-basics, tags: keyboard }
     - { role: copypaste, tags: copypaste }
     - { role: terminal, tags: terminal }
+    - { role: gantsign.oh-my-zsh, tags: terminal, users: [{ username: david }]}
     - { role: auth, tags: auth }
     - { role: net, tags: net }
     - { role: browser, tags: browse }
